@@ -18,7 +18,6 @@
 // File: port.php
 
 include './global_includes.php';
-include_once './includes/is_loan_pending.php';
 
 if (check_login ($db, $lang, $langvars)) // Checks player login, sets playerinfo
 {
@@ -294,7 +293,7 @@ elseif ($sectorinfo['port_type'] == "special")
     // Kami Multi-browser window upgrade fix
     $_SESSION['port_shopping'] = true;
 
-    if (is_loan_pending ($db, $playerinfo['ship_id'], $ibank_lrate))
+    if (BntIbank::is_loan_pending ($db, $playerinfo['ship_id'], $ibank_lrate))
     {
         echo $l_port_loannotrade . "<p>";
         echo "<a href=igb.php>" . $l_ibank_term . "</a><p>";
